// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FinancialInformation component should display AlertMessage 1`] = `
<SectionedFormContent
  callback={[Function]}
  closedDescription="ATUCAD_FINANCIAL_SITUATION_OWNERSHIP"
  dataTest="SectionedFinancialInformation"
  openedDescription="ATUCAD_FINANCIAL_SITUATION_OWNERSHIP"
  valid={true}
>
  <styled.div>
    <styled.div
      span={
        Array [
          1,
          3,
        ]
      }
    >
      <AlertMessage
        dataTest="alertMessage"
        icon="Attention"
        spacing={
          Object {
            "bottom": "none",
            "left": "none",
            "right": "none",
            "top": "none",
          }
        }
        type="error"
      >
        ATUCAD_REQUIRED_FIELDS_OMMITED
        :
        <br />
        <styled.span
          data-last="ATUCAD_AND"
          key="rangeId"
        >
          ATUCAD_TOTAL
        </styled.span>
        <styled.span
          data-last="ATUCAD_AND"
          key="rangeId"
        >
          ATUCAD_STOCKS
        </styled.span>
        <styled.span
          data-last="ATUCAD_AND"
          key="rangeId"
        >
          ATUCAD_FUNDS
        </styled.span>
        <styled.span
          data-last="ATUCAD_AND"
          key="rangeId"
        >
          ATUCAD_BONDS
        </styled.span>
        <styled.span
          data-last="ATUCAD_AND"
          key="rangeId"
        >
          ATUCAD_SAVINGS
        </styled.span>
        <styled.span
          data-last="ATUCAD_AND"
          key="rangeId"
        >
          ATUCAD_REALPROPERTY
        </styled.span>
        <styled.span
          data-last="ATUCAD_AND"
          key="rangeId"
        >
          ATUCAD_PERSONALPROPERTY
        </styled.span>
        <styled.span
          data-last="ATUCAD_AND"
          key="rangeId"
        >
          ATUCAD_BONUSESANDCOMMISSIONS
        </styled.span>
        <styled.span
          data-last="ATUCAD_AND"
          key="rangeId"
        >
          ATUCAD_SALARY
        </styled.span>
        <styled.span
          data-last="ATUCAD_AND"
          key="rangeId"
        >
          ATUCAD_OTHERS
        </styled.span>
      </AlertMessage>
    </styled.div>
    <styled.div
      span={
        Array [
          1,
          3,
        ]
      }
    >
      <Styled(styled.div)
        columns={2}
      >
        <Styled(styled.div)
          IEFractionParts={2}
          span={
            Array [
              1,
              2,
            ]
          }
        >
          <styled.h3>
            ATUCAD_TOTAL
          </styled.h3>
        </Styled(styled.div)>
        <Styled(styled.div)
          IEFractionParts={2}
          span={
            Array [
              1,
              2,
            ]
          }
        >
          <Dropdown
            dataTest="SelectTotalNetWorth"
            height="46"
            label="ATUCAD_TOTAL_NET_WORTH"
            name="financial_total_net_worth"
            noMargin={true}
            onChange={[Function]}
            tinyLabels={true}
            value={3}
            width={100}
          />
        </Styled(styled.div)>
      </Styled(styled.div)>
    </styled.div>
    <styled.div
      span={
        Array [
          1,
          3,
        ]
      }
    >
      <Styled(styled.div)
        columns={2}
      >
        <Styled(styled.div)
          IEFractionParts={2}
          span={
            Array [
              1,
              2,
            ]
          }
        >
          <styled.h3>
            ATUCAD_LIQUID_ASSETS
          </styled.h3>
        </Styled(styled.div)>
        <Styled(styled.div)
          IEFractionParts={2}
        >
          <Dropdown
            dataTest="SelectShares"
            height="46"
            label="ATUCAD_SHARES"
            name="financial_shares"
            noMargin={true}
            onChange={[Function]}
            tinyLabels={true}
            value={3}
            width={100}
          />
        </Styled(styled.div)>
        <Styled(styled.div)
          IEFractionParts={2}
        >
          <Dropdown
            dataTest="SelectFunds"
            height="46"
            label="ATUCAD_FUNDS"
            name="financial_funds"
            noMargin={true}
            onChange={[Function]}
            tinyLabels={true}
            value={3}
            width={100}
          />
        </Styled(styled.div)>
        <Styled(styled.div)
          IEFractionParts={2}
        >
          <Dropdown
            dataTest="SelectBonds"
            height="46"
            label="ATUCAD_BONDS"
            name="financial_bonds"
            noMargin={true}
            onChange={[Function]}
            tinyLabels={true}
            value={3}
            width={100}
          />
        </Styled(styled.div)>
        <Styled(styled.div)
          IEFractionParts={2}
        >
          <Dropdown
            dataTest="SelectPassbookSavings"
            height="46"
            label="ATUCAD_SAVINGS"
            name="financial_savings"
            noMargin={true}
            onChange={[Function]}
            tinyLabels={true}
            value={3}
            width={100}
          />
        </Styled(styled.div)>
      </Styled(styled.div)>
    </styled.div>
    <styled.div
      span={
        Array [
          1,
          3,
        ]
      }
    >
      <Styled(styled.div)
        columns={2}
      >
        <Styled(styled.div)
          IEFractionParts={2}
          span={
            Array [
              1,
              2,
            ]
          }
        >
          <styled.h3>
            ATUCAD_ILLIQUID_ASSETS
          </styled.h3>
        </Styled(styled.div)>
        <Styled(styled.div)
          IEFractionParts={2}
        >
          <Dropdown
            dataTest="SelectImmovables"
            height="46"
            label="ATUCAD_IMMOVABLES"
            name="financial_immovables"
            noMargin={true}
            onChange={[Function]}
            tinyLabels={true}
            value={3}
            width={100}
          />
        </Styled(styled.div)>
        <Styled(styled.div)
          IEFractionParts={2}
        >
          <Dropdown
            dataTest="SelectMovables"
            height="46"
            label="ATUCAD_MOVABLES"
            name="financial_movables"
            noMargin={true}
            onChange={[Function]}
            tinyLabels={true}
            value={3}
            width={100}
          />
        </Styled(styled.div)>
      </Styled(styled.div)>
    </styled.div>
    <styled.div
      span={
        Array [
          1,
          3,
        ]
      }
    >
      <Styled(styled.div)
        columns={2}
      >
        <Styled(styled.div)
          IEFractionParts={2}
          span={
            Array [
              1,
              2,
            ]
          }
        >
          <styled.h3>
            ATUCAD_ESTIMATED_ANUAL_INCOME
          </styled.h3>
        </Styled(styled.div)>
        <Styled(styled.div)
          IEFractionParts={2}
        >
          <Dropdown
            dataTest="SelectSalaryOrPartnersFee"
            height="46"
            label="ATUCAD_SALARY_OR_PARTNERS_FEE"
            name="financial_salary"
            noMargin={true}
            onChange={[Function]}
            tinyLabels={true}
            value={3}
            width={100}
          />
        </Styled(styled.div)>
        <Styled(styled.div)
          IEFractionParts={2}
        >
          <Dropdown
            dataTest="SelectBonusesGratificationsAndCommisions"
            height="46"
            label="ATUCAD_BONUSES_GRATIFICATIONS_AND_COMMISIONS"
            name="financial_bonuses"
            noMargin={true}
            onChange={[Function]}
            tinyLabels={true}
            value={3}
            width={100}
          />
        </Styled(styled.div)>
        <Styled(styled.div)
          IEFractionParts={2}
          span={
            Array [
              1,
              2,
            ]
          }
        >
          <Dropdown
            dataTest="SelectOtherIncome"
            height="46"
            label="ATUCAD_OTHER_INCOME"
            name="financial_others"
            noMargin={true}
            onChange={[Function]}
            tinyLabels={true}
            value={3}
            width={100}
          />
        </Styled(styled.div)>
      </Styled(styled.div)>
    </styled.div>
  </styled.div>
</SectionedFormContent>
`;

exports[`FinancialInformation component should match snapshot with null values 1`] = `
<SectionedFormContent
  callback={[Function]}
  closedDescription="ATUCAD_FINANCIAL_SITUATION_OWNERSHIP"
  dataTest="SectionedFinancialInformation"
  openedDescription="ATUCAD_FINANCIAL_SITUATION_OWNERSHIP"
  valid={true}
>
  <styled.div>
    <styled.div
      span={
        Array [
          1,
          3,
        ]
      }
    >
      <Styled(styled.div)
        columns={2}
      >
        <Styled(styled.div)
          IEFractionParts={2}
          span={
            Array [
              1,
              2,
            ]
          }
        >
          <styled.h3>
            ATUCAD_TOTAL
          </styled.h3>
        </Styled(styled.div)>
        <Styled(styled.div)
          IEFractionParts={2}
          span={
            Array [
              1,
              2,
            ]
          }
        >
          <Dropdown
            dataTest="SelectTotalNetWorth"
            height="46"
            label="ATUCAD_TOTAL_NET_WORTH"
            name="financial_total_net_worth"
            noMargin={true}
            onChange={[Function]}
            tinyLabels={true}
            value="---"
            width={100}
          />
        </Styled(styled.div)>
      </Styled(styled.div)>
    </styled.div>
    <styled.div
      span={
        Array [
          1,
          3,
        ]
      }
    >
      <Styled(styled.div)
        columns={2}
      >
        <Styled(styled.div)
          IEFractionParts={2}
          span={
            Array [
              1,
              2,
            ]
          }
        >
          <styled.h3>
            ATUCAD_LIQUID_ASSETS
          </styled.h3>
        </Styled(styled.div)>
        <Styled(styled.div)
          IEFractionParts={2}
        >
          <Dropdown
            dataTest="SelectShares"
            height="46"
            label="ATUCAD_SHARES"
            name="financial_shares"
            noMargin={true}
            onChange={[Function]}
            tinyLabels={true}
            value="---"
            width={100}
          />
        </Styled(styled.div)>
        <Styled(styled.div)
          IEFractionParts={2}
        >
          <Dropdown
            dataTest="SelectFunds"
            height="46"
            label="ATUCAD_FUNDS"
            name="financial_funds"
            noMargin={true}
            onChange={[Function]}
            tinyLabels={true}
            value="---"
            width={100}
          />
        </Styled(styled.div)>
        <Styled(styled.div)
          IEFractionParts={2}
        >
          <Dropdown
            dataTest="SelectBonds"
            height="46"
            label="ATUCAD_BONDS"
            name="financial_bonds"
            noMargin={true}
            onChange={[Function]}
            tinyLabels={true}
            value="---"
            width={100}
          />
        </Styled(styled.div)>
        <Styled(styled.div)
          IEFractionParts={2}
        >
          <Dropdown
            dataTest="SelectPassbookSavings"
            height="46"
            label="ATUCAD_SAVINGS"
            name="financial_savings"
            noMargin={true}
            onChange={[Function]}
            tinyLabels={true}
            value="---"
            width={100}
          />
        </Styled(styled.div)>
      </Styled(styled.div)>
    </styled.div>
    <styled.div
      span={
        Array [
          1,
          3,
        ]
      }
    >
      <Styled(styled.div)
        columns={2}
      >
        <Styled(styled.div)
          IEFractionParts={2}
          span={
            Array [
              1,
              2,
            ]
          }
        >
          <styled.h3>
            ATUCAD_ILLIQUID_ASSETS
          </styled.h3>
        </Styled(styled.div)>
        <Styled(styled.div)
          IEFractionParts={2}
        >
          <Dropdown
            dataTest="SelectImmovables"
            height="46"
            label="ATUCAD_IMMOVABLES"
            name="financial_immovables"
            noMargin={true}
            onChange={[Function]}
            tinyLabels={true}
            value="---"
            width={100}
          />
        </Styled(styled.div)>
        <Styled(styled.div)
          IEFractionParts={2}
        >
          <Dropdown
            dataTest="SelectMovables"
            height="46"
            label="ATUCAD_MOVABLES"
            name="financial_movables"
            noMargin={true}
            onChange={[Function]}
            tinyLabels={true}
            value="---"
            width={100}
          />
        </Styled(styled.div)>
      </Styled(styled.div)>
    </styled.div>
    <styled.div
      span={
        Array [
          1,
          3,
        ]
      }
    >
      <Styled(styled.div)
        columns={2}
      >
        <Styled(styled.div)
          IEFractionParts={2}
          span={
            Array [
              1,
              2,
            ]
          }
        >
          <styled.h3>
            ATUCAD_ESTIMATED_ANUAL_INCOME
          </styled.h3>
        </Styled(styled.div)>
        <Styled(styled.div)
          IEFractionParts={2}
        >
          <Dropdown
            dataTest="SelectSalaryOrPartnersFee"
            height="46"
            label="ATUCAD_SALARY_OR_PARTNERS_FEE"
            name="financial_salary"
            noMargin={true}
            onChange={[Function]}
            tinyLabels={true}
            value="---"
            width={100}
          />
        </Styled(styled.div)>
        <Styled(styled.div)
          IEFractionParts={2}
        >
          <Dropdown
            dataTest="SelectBonusesGratificationsAndCommisions"
            height="46"
            label="ATUCAD_BONUSES_GRATIFICATIONS_AND_COMMISIONS"
            name="financial_bonuses"
            noMargin={true}
            onChange={[Function]}
            tinyLabels={true}
            value="---"
            width={100}
          />
        </Styled(styled.div)>
        <Styled(styled.div)
          IEFractionParts={2}
          span={
            Array [
              1,
              2,
            ]
          }
        >
          <Dropdown
            dataTest="SelectOtherIncome"
            height="46"
            label="ATUCAD_OTHER_INCOME"
            name="financial_others"
            noMargin={true}
            onChange={[Function]}
            tinyLabels={true}
            value="---"
            width={100}
          />
        </Styled(styled.div)>
      </Styled(styled.div)>
    </styled.div>
  </styled.div>
</SectionedFormContent>
`;

exports[`FinancialInformation component should match snapshot with props 1`] = `
<SectionedFormContent
  callback={[Function]}
  closedDescription="ATUCAD_FINANCIAL_SITUATION_OWNERSHIP"
  dataTest="SectionedFinancialInformation"
  openedDescription="ATUCAD_FINANCIAL_SITUATION_OWNERSHIP"
  valid={true}
>
  <styled.div>
    <styled.div
      span={
        Array [
          1,
          3,
        ]
      }
    >
      <Styled(styled.div)
        columns={2}
      >
        <Styled(styled.div)
          IEFractionParts={2}
          span={
            Array [
              1,
              2,
            ]
          }
        >
          <styled.h3>
            ATUCAD_TOTAL
          </styled.h3>
        </Styled(styled.div)>
        <Styled(styled.div)
          IEFractionParts={2}
          span={
            Array [
              1,
              2,
            ]
          }
        >
          <Dropdown
            dataTest="SelectTotalNetWorth"
            height="46"
            label="ATUCAD_TOTAL_NET_WORTH"
            name="financial_total_net_worth"
            noMargin={true}
            onChange={[Function]}
            tinyLabels={true}
            value={7}
            width={100}
          />
        </Styled(styled.div)>
      </Styled(styled.div)>
    </styled.div>
    <styled.div
      span={
        Array [
          1,
          3,
        ]
      }
    >
      <Styled(styled.div)
        columns={2}
      >
        <Styled(styled.div)
          IEFractionParts={2}
          span={
            Array [
              1,
              2,
            ]
          }
        >
          <styled.h3>
            ATUCAD_LIQUID_ASSETS
          </styled.h3>
        </Styled(styled.div)>
        <Styled(styled.div)
          IEFractionParts={2}
        >
          <Dropdown
            dataTest="SelectShares"
            height="46"
            label="ATUCAD_SHARES"
            name="financial_shares"
            noMargin={true}
            onChange={[Function]}
            tinyLabels={true}
            value={1}
            width={100}
          />
        </Styled(styled.div)>
        <Styled(styled.div)
          IEFractionParts={2}
        >
          <Dropdown
            dataTest="SelectFunds"
            height="46"
            label="ATUCAD_FUNDS"
            name="financial_funds"
            noMargin={true}
            onChange={[Function]}
            tinyLabels={true}
            value={2}
            width={100}
          />
        </Styled(styled.div)>
        <Styled(styled.div)
          IEFractionParts={2}
        >
          <Dropdown
            dataTest="SelectBonds"
            height="46"
            label="ATUCAD_BONDS"
            name="financial_bonds"
            noMargin={true}
            onChange={[Function]}
            tinyLabels={true}
            value={3}
            width={100}
          />
        </Styled(styled.div)>
        <Styled(styled.div)
          IEFractionParts={2}
        >
          <Dropdown
            dataTest="SelectPassbookSavings"
            height="46"
            label="ATUCAD_SAVINGS"
            name="financial_savings"
            noMargin={true}
            onChange={[Function]}
            tinyLabels={true}
            value={4}
            width={100}
          />
        </Styled(styled.div)>
      </Styled(styled.div)>
    </styled.div>
    <styled.div
      span={
        Array [
          1,
          3,
        ]
      }
    >
      <Styled(styled.div)
        columns={2}
      >
        <Styled(styled.div)
          IEFractionParts={2}
          span={
            Array [
              1,
              2,
            ]
          }
        >
          <styled.h3>
            ATUCAD_ILLIQUID_ASSETS
          </styled.h3>
        </Styled(styled.div)>
        <Styled(styled.div)
          IEFractionParts={2}
        >
          <Dropdown
            dataTest="SelectImmovables"
            height="46"
            label="ATUCAD_IMMOVABLES"
            name="financial_immovables"
            noMargin={true}
            onChange={[Function]}
            tinyLabels={true}
            value={5}
            width={100}
          />
        </Styled(styled.div)>
        <Styled(styled.div)
          IEFractionParts={2}
        >
          <Dropdown
            dataTest="SelectMovables"
            height="46"
            label="ATUCAD_MOVABLES"
            name="financial_movables"
            noMargin={true}
            onChange={[Function]}
            tinyLabels={true}
            value={6}
            width={100}
          />
        </Styled(styled.div)>
      </Styled(styled.div)>
    </styled.div>
    <styled.div
      span={
        Array [
          1,
          3,
        ]
      }
    >
      <Styled(styled.div)
        columns={2}
      >
        <Styled(styled.div)
          IEFractionParts={2}
          span={
            Array [
              1,
              2,
            ]
          }
        >
          <styled.h3>
            ATUCAD_ESTIMATED_ANUAL_INCOME
          </styled.h3>
        </Styled(styled.div)>
        <Styled(styled.div)
          IEFractionParts={2}
        >
          <Dropdown
            dataTest="SelectSalaryOrPartnersFee"
            height="46"
            label="ATUCAD_SALARY_OR_PARTNERS_FEE"
            name="financial_salary"
            noMargin={true}
            onChange={[Function]}
            tinyLabels={true}
            value={5}
            width={100}
          />
        </Styled(styled.div)>
        <Styled(styled.div)
          IEFractionParts={2}
        >
          <Dropdown
            dataTest="SelectBonusesGratificationsAndCommisions"
            height="46"
            label="ATUCAD_BONUSES_GRATIFICATIONS_AND_COMMISIONS"
            name="financial_bonuses"
            noMargin={true}
            onChange={[Function]}
            tinyLabels={true}
            value={1}
            width={100}
          />
        </Styled(styled.div)>
        <Styled(styled.div)
          IEFractionParts={2}
          span={
            Array [
              1,
              2,
            ]
          }
        >
          <Dropdown
            dataTest="SelectOtherIncome"
            height="46"
            label="ATUCAD_OTHER_INCOME"
            name="financial_others"
            noMargin={true}
            onChange={[Function]}
            tinyLabels={true}
            value={3}
            width={100}
          />
        </Styled(styled.div)>
      </Styled(styled.div)>
    </styled.div>
  </styled.div>
</SectionedFormContent>
`;
